<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.Login.LoginActivity"
    android:background="@color/colorPastelGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Online Yemek"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="italic"
        android:elegantTextHeight="true"
        android:padding="12dp" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="90dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="İsim"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="@string/description"
            app:passwordToggleDrawable="@drawable/baseline_visibility_black_48dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Beni Hatırla" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="@string/description"
            app:passwordToggleDrawable="@drawable/baseline_visibility_black_48dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefon  (ör. 05551234567)"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Adres"
            android:inputType="textPostalAddress" />


        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/button_pink"
            android:text="KAYDOL"
            android:textStyle="bold"
            android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <TextView
            android:id="@+id/textView_password_reset"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_pink"
            android:textAlignment="center"
            android:text="@string/password_recover" />


    </LinearLayout>

    <TextView
        android:id="@+id/sign"
        android:padding="10dp"
        android:textSize="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/button_pink"
        android:textAlignment="center"
        android:text="Oturum Aç"
        android:textStyle="bold"
        android:layout_alignParentBottom="true" />


</RelativeLayout>