<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:clickable="true"
            android:elevation="40dp"
            android:focusable="true"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.bilgeadam.mobilefoodapp.custom.ClickableViewPager
                    android:id="@+id/image_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@id/image_pager"
                    android:layout_centerHorizontal="true"
                    android:padding="16dp"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/arranger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.5"
            android:background="@color/grey">

            <Button
                android:id="@+id/mealbtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/arranger"
                app:layout_constraintStart_toStartOf="@+id/arranger"
                app:layout_constraintHeight_percent="0.60"
                app:layout_constraintWidth_percent="0.45"
                android:background="@drawable/btn_meal"
                android:textColor="@android:color/white"
                android:text="@string/btn_foods"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textAlignment="gravity"
                android:drawablePadding="-30dp"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/restaurant"
                />

            <Button
                android:id="@+id/previousordersbtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/arranger"
                app:layout_constraintStart_toStartOf="@+id/arranger"
                app:layout_constraintHeight_percent="0.40"
                app:layout_constraintWidth_percent="0.45"
                android:background="@drawable/btn_prevorders"
                android:textColor="@android:color/white"
                android:text="@string/btn_previousorders"
                android:textSize="20sp"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/ordersbtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/arranger"
                app:layout_constraintEnd_toEndOf="@+id/arranger"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintWidth_percent="0.55"
                android:background="@drawable/btn_orders"
                android:textColor="@android:color/black"
                android:text="@string/btn_orders"
                android:textSize="20sp"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/arranger"
                app:layout_constraintEnd_toEndOf="@+id/arranger"
                app:layout_constraintHeight_percent="0.75"
                app:layout_constraintWidth_percent="0.55"
                android:background="@drawable/btn_login"
                android:textColor="@android:color/white"
                android:text="@string/btn_login"
                android:textSize="25sp"
                android:textAllCaps="false"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>