<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPastelGreen"
    android:orientation="vertical">

    <ListView
        android:id="@+id/oiItems_list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:drawSelectorOnTop="true"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:padding="5dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Kullanıcı Bilgisi"
            android:textColor="@color/button_pink"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/user_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oi_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="None"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_phone_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/user_number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oi_user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="None"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_address_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/user_address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oi_user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="None"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_pink"
                android:text="Kabul Et" />

            <Button
                android:id="@+id/decline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/button_pink"
                android:text="Reddet" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>